feat: inclusion de atributo lazy loading en imagenes

--- a/es/composicionparamedios/equipo.html
+++ b/es/composicionparamedios/equipo.html
@@ -56,13 +56,13 @@
   <main class="px-15">
     <div class="images-group">
       <div class="image-member">
-        <a href="/es/torre"><img src="../../assets/images/torre-es.png" alt="foto torre"></a>
+        <a href="/es/torre"><img loading="lazy" src="../../assets/images/torre-es.png" alt="foto torre"></a>
       </div>
       <div class="image-member">
-        <a href="/es/omar"><img src="../../assets/images/omar-es.png" alt="foto omar"></a>
+        <a href="/es/omar"><img loading="lazy" src="../../assets/images/omar-es.png" alt="foto omar"></a>
       </div>
       <div class="image-member">
-        <a href="/es/lando"><img src="../../assets/images/lando-es.png" alt="foto lando"></a>
+        <a href="/es/lando"><img loading="lazy" src="../../assets/images/lando-es.png" alt="foto lando"></a>
       </div>
     </div>
   </main>
