--- a/es/composicionparamedios/index.html
+++ b/es/composicionparamedios/index.html
@@ -56,8 +56,8 @@
   <main>
     <div class="links-paragraph-block px-15 content-container">
       <div class="group-links">
-        <a href="/es/composicionparamedios/demodevideo"><img src="../../assets/images/demo-video.png" alt="logo demo de video"></a>
-        <a href="/es/composicionparamedios/demodeaudio"><img src="../../assets/images/demo-audio.png" alt="logo demo de audio"></a>
+        <a href="/es/composicionparamedios/demodevideo"><img loading="lazy" src="../../assets/images/demo-video.png" alt="logo demo de video"></a>
+        <a href="/es/composicionparamedios/demodeaudio"><img loading="lazy" src="../../assets/images/demo-audio.png" alt="logo demo de audio"></a>
       </div>
       <p class="font-text px-15 description">
         Qué hacemos:<br>
@@ -75,15 +75,15 @@
     </div>
     <div class="group-images-container px-15 content-container">
       <div class="image-container">
-        <img src="../../assets/images/Fotos Royalty free.001.jpeg" alt="Librerías virtuales de tope de línea">
+        <img loading="lazy" src="../../assets/images/Fotos Royalty free.001.jpeg" alt="Librerías virtuales de tope de línea">
         <h4 class="font-text">Librerías virtuales de tope de línea</h4>
       </div>
       <div class="image-container">
-        <img src="../../assets/images/Fotos Royalty free.002.jpeg" alt="Músicos profesionales">
+        <img loading="lazy" src="../../assets/images/Fotos Royalty free.002.jpeg" alt="Músicos profesionales">
         <h4 class="font-text">Músicos profesionales</h4>
       </div>
       <div class="image-container">
-        <img src="../../assets/images/Fotos Royalty free.003.jpeg" alt="Orquestas reales">
+        <img loading="lazy" src="../../assets/images/Fotos Royalty free.003.jpeg" alt="Orquestas reales">
         <h4 class="font-text">Orquestas reales</h4>
       </div>
     </div>
