--- a/es/omar.html
+++ b/es/omar.html
@@ -60,7 +60,7 @@
         <strong><br>Torre</strong>
       </p>
       <div class="image-container">
-        <img class="image-detail" src="../assets/images/omar-detail-es.jpg" alt="foto de omar">
+        <img loading="lazy" class="image-detail" src="../assets/images/omar-detail-es.jpg" alt="foto de omar">
       </div>
       <p class="quote-description font-text text-left">
         <em>"Con una formación académica que lo convierte en una pieza muy valiosa en nuestros proyectos musicales, Pienso que Omar es un músico que ha sabido balancear muy bien lo artístico y lo académico, contar con él es descansar en que todo saldrá bien y a tiempo".<br></em>
