--- a/es/torre.html
+++ b/es/torre.html
@@ -60,7 +60,7 @@
         <strong><br>Omar</strong>
       </p>
       <div class="image-container">
-        <img class="image-detail" src="../assets/images/torre-detail-es.jpg" alt="foto de torre">
+        <img loading="lazy" class="image-detail" src="../assets/images/torre-detail-es.jpg" alt="foto de torre">
       </div>
       <p class="quote-description font-text text-left">
         <em>"Si tuviera que describirlo en una frase, esa sería: 'Él respira música'.
