--- a/landoM.html
+++ b/landoM.html
@@ -60,7 +60,7 @@
         <strong><br>Torre</strong>
       </p>
       <div class="image-container">
-        <img class="image-detail" src="./assets/images/lando-detail.jpg" alt="torre photo">
+        <img loading="lazy" class="image-detail" src="./assets/images/lando-detail.jpg" alt="torre photo">
       </div>
       <p class="quote-description font-text">
         <em>"Despite his long experience as a short film director, photographer, as well as a music producer, Lando didn't lose his passion for audio engineering, which has allowed him to grow until the point of achieving a level of quality that matches the international standards. Due to his vast background, he's always able to bring solid support to overcome the obstacles we may face within the production process at Torre Music".<br></em>
