--- a/mediacomposing/index.html
+++ b/mediacomposing/index.html
@@ -56,8 +56,8 @@
   <main>
     <div class="links-paragraph-block px-15 content-container">
       <div class="group-links">
-        <a href="/mediacomposing/showreel"><img src="../assets/images/showreel.png" alt="logo show reel"></a>
-        <a href="/mediacomposing/audioreel"><img src="../assets/images/audioreel.png" alt="logo audio reel"></a>
+        <a href="/mediacomposing/showreel"><img loading="lazy" src="../assets/images/showreel.png" alt="logo show reel"></a>
+        <a href="/mediacomposing/audioreel"><img loading="lazy" src="../assets/images/audioreel.png" alt="logo audio reel"></a>
       </div>
       <p class="font-text px-15 description">
         What we do:<br>
@@ -75,15 +75,15 @@
     </div>
     <div class="group-images-container px-15 content-container">
       <div class="image-container">
-        <img src="../assets/images/Fotos Royalty free.001.jpeg" alt="Top of the line virtual libraries">
+        <img loading="lazy" src="../assets/images/Fotos Royalty free.001.jpeg" alt="Top of the line virtual libraries">
         <h4 class="font-text">Top of the line virtual libraries</h4>
       </div>
       <div class="image-container">
-        <img src="../assets/images/Fotos Royalty free.002.jpeg" alt="Professional musicians">
+        <img loading="lazy" src="../assets/images/Fotos Royalty free.002.jpeg" alt="Professional musicians">
         <h4 class="font-text">Professional musicians</h4>
       </div>
       <div class="image-container">
-        <img src="../assets/images/Fotos Royalty free.003.jpeg" alt="Real orchestras">
+        <img loading="lazy" src="../assets/images/Fotos Royalty free.003.jpeg" alt="Real orchestras">
         <h4 class="font-text">Real orchestras</h4>
       </div>
     </div>
