--- a/mediacomposing/team.html
+++ b/mediacomposing/team.html
@@ -56,13 +56,13 @@
   <main class="px-15">
     <div class="images-group">
       <div class="image-member">
-        <a href="/torreM"><img src="../assets/images/torre.png" alt="torre photo"></a>
+        <a href="/torreM"><img loading="lazy" src="../assets/images/torre.png" alt="torre photo"></a>
       </div>
       <div class="image-member">
-        <a href="/omarM"><img src="../assets/images/omar.png" alt="omar photo"></a>
+        <a href="/omarM"><img loading="lazy" src="../assets/images/omar.png" alt="omar photo"></a>
       </div>
       <div class="image-member">
-        <a href="/landoM"><img src="../assets/images/lando.png" alt="lando photo"></a>
+        <a href="/landoM"><img loading="lazy" src="../assets/images/lando.png" alt="lando photo"></a>
       </div>
     </div>
   </main>
