--- a/omarM.html
+++ b/omarM.html
@@ -60,7 +60,7 @@
         <strong><br>Torre</strong>
       </p>
       <div class="image-container">
-        <img class="image-detail" src="./assets/images/omar-detail.jpg" alt="omar photo">
+        <img loading="lazy" class="image-detail" src="./assets/images/omar-detail.jpg" alt="omar photo">
       </div>
       <p class="quote-description font-text">
         <em>"He owns an academic preparation that turns him into a very valuable element for our music projects in Media Composing. I think Omar is a musician who managed to balance very well art with knowledge. Counting on him brings confidence at knowing everything will be on point and on time".<br></em>
