--- a/torreM.html
+++ b/torreM.html
@@ -60,7 +60,7 @@
         <strong><br>Omar</strong>
       </p>
       <div class="image-container">
-        <img class="image-detail" src="./assets/images/torre-detail.jpg" alt="torre photo">
+        <img loading="lazy" class="image-detail" src="./assets/images/torre-detail.jpg" alt="torre photo">
       </div>
       <p class="quote-description font-text">
         <em>"If could describe him in one line, it'd be: He breathes music.<br>Torre is a natural born musician, a dear friend. Throughout the years, I've seen and exceptional ability to intertwine feelings and emotions with music, without hesitation it's a gift and the best ingredient in his compositions".<br></em>
