feat: inclusion de archivos json con data y scripts que setean la data

--- a/es/composicionparamedios/demodevideo.html
+++ b/es/composicionparamedios/demodevideo.html
@@ -44,10 +44,10 @@
             </li>
           </ul>
           <ul class="navbar__menu-social-media">
-            <li><a href="#" class="icon-facebook"></a></li>
-            <li><a href="#" class="icon-instagram"></a></li>
-            <li><a href="#" class="icon-spotify"></a></li>
-            <li><a href="#" class="icon-youtube"></a></li>
+            <li><a href="#" class="icon-facebook" target="_blank"></a></li>
+            <li><a href="#" class="icon-instagram" target="_blank"></a></li>
+            <li><a href="#" class="icon-spotify" target="_blank"></a></li>
+            <li><a href="#" class="icon-youtube" target="_blank"></a></li>
           </ul>
         </div>
       </div>
@@ -72,10 +72,10 @@
         </div>
       </div>
     </div>
-    <p class="font-text link-media">
-      Para ver los videos de forma individual haz click <a class="font-text" href="https://www.youtube.com/playlist?list=PL4qrdhLgUbQ_HAdzKIhNSwwXRMrj084ZC" target="_blank">aquí</a>
-    </p>
+    <p id="text-caption-video-esp" class="font-text link-media"></p>
   </main>
+  <script src="../data.config.esp.js"></script>
+  <script src="../../assets/js/setDataEsp.js"></script>
   <script src="../../assets/js/main.js"></script>
 </body>
 </html>
