--- a/es/composicionparamedios/index.html
+++ b/es/composicionparamedios/index.html
@@ -44,10 +44,10 @@
             </li>
           </ul>
           <ul class="navbar__menu-social-media">
-            <li><a href="#" class="icon-facebook"></a></li>
-            <li><a href="#" class="icon-instagram"></a></li>
-            <li><a href="#" class="icon-spotify"></a></li>
-            <li><a href="#" class="icon-youtube"></a></li>
+            <li><a href="#" class="icon-facebook" target="_blank"></a></li>
+            <li><a href="#" class="icon-instagram" target="_blank"></a></li>
+            <li><a href="#" class="icon-spotify" target="_blank"></a></li>
+            <li><a href="#" class="icon-youtube" target="_blank"></a></li>
           </ul>
         </div>
       </div>
@@ -59,21 +59,9 @@
         <a href="/es/composicionparamedios/demodevideo"><img loading="lazy" src="../../assets/images/demo-video.png" alt="logo demo de video"></a>
         <a href="/es/composicionparamedios/demodeaudio"><img loading="lazy" src="../../assets/images/demo-audio.png" alt="logo demo de audio"></a>
       </div>
-      <p class="font-text px-15 description">
-        Qué hacemos:<br>
-        Música y efectos de sonido para medios y proyectos cinematográficos
-        <br><br>
-        Nuestros clientes:<br>
-        Emprendedores, productores independientes y empresas con trayectoria
-        <br><br>
-        Contamos con:<br>
-        • Músicos profesionales de sesión<br>
-        • Orquesta de 22 cuerdas y de 30 piezas orquestales<br>
-        • 2 estudios de programación, ambos implementados para ofrecer el estándar de calidad que exige la industria<br>
-        • 1 sala equipada para mezcla y mastering realizar varios proyectos simultáneamente<br>
-      </p>
+      <p id="paragraph_esp" class="font-text px-15 description"></p>
     </div>
-    <div class="group-images-container px-15 content-container">
+    <div id="images-list-esp" class="group-images-container px-15 content-container">
       <div class="image-container">
         <img loading="lazy" src="../../assets/images/Fotos Royalty free.001.jpeg" alt="Librerías virtuales de tope de línea">
         <h4 class="font-text">Librerías virtuales de tope de línea</h4>
@@ -88,6 +76,8 @@
       </div>
     </div>
   </main>
-  <script src="../assets/js/main.js"></script>
+  <script src="../data.config.esp.js"></script>
+  <script src="../../assets/js/setDataEsp.js"></script>
+  <script src="../../assets/js/main.js"></script>
 </body>
 </html>
