--- a/es/lando.html
+++ b/es/lando.html
@@ -44,10 +44,10 @@
             </li>
           </ul>
           <ul class="navbar__menu-social-media">
-            <li><a href="#" class="icon-facebook"></a></li>
-            <li><a href="#" class="icon-instagram"></a></li>
-            <li><a href="#" class="icon-spotify"></a></li>
-            <li><a href="#" class="icon-youtube"></a></li>
+            <li><a href="#" class="icon-facebook" target="_blank"></a></li>
+            <li><a href="#" class="icon-instagram" target="_blank"></a></li>
+            <li><a href="#" class="icon-spotify" target="_blank"></a></li>
+            <li><a href="#" class="icon-youtube" target="_blank"></a></li>
           </ul>
         </div>
       </div>
@@ -55,14 +55,14 @@
   </nav>
   <main class="px-15">
     <div class="content-container">
-      <p class="quote-description font-text text-left">
+      <p id="first-quote-lando-esp" class="quote-description font-text text-left">
         <em>"A pesar de su experiencia como director de cortometrajes, fotógrafo y también como productor musical, Lando no perdió su conocida pasión por el audio, y eso le ha permitido crecer hasta lograr un nivel de calidad acorde a los estándares internacionales. Por su bagaje, él siempre aporta con soluciones para los obstáculos que nos encontramos dentro de la producción en Torre Music".<br></em>
         <strong><br>Omar</strong>
       </p>
       <div class="image-container">
         <img loading="lazy" class="image-detail" src="../assets/images/lando-detail-es.jpg" alt="foto de lando">
       </div>
-      <p class="quote-description font-text text-left">
+      <p id="second-quote-lando-esp" class="quote-description font-text text-left">
         <em><br>"Con Lando nos conocemos desde la adolescencia. Pronto, empezaríamos a producir musicalmente para otros artistas, así como para medios en Perú y EEUU. Con un abanico de habilidades y experiencia, él es un catalizador, motivador y pieza clave dentro de Torre Music.<br>Su equilibrio entre la apreciación del sonido de calidad, la capacidad de tomar las mejores decisiones en la mezcla, y apertura para aceptar consejos y lecciones de reconocidos y galardonados ingenieros de sonido, le han dado como resultado un nivel de calidad que alienta y hasta desafía nuestra sinergia".<br></em>
         <strong><br>Torre</strong>
       </p>
@@ -71,6 +71,8 @@
       <a class="btn-back font-text" href="/es/composicionparamedios/equipo" type="button">Volver</a>
     </div>
   </main>
+  <script src="./data.config.esp.js"></script>
+  <script src="../assets/js/setDataEsp.js"></script>
   <script src="../assets/js/main.js"></script>
 </body>
 </html>
