--- a/es/omar.html
+++ b/es/omar.html
@@ -44,10 +44,10 @@
             </li>
           </ul>
           <ul class="navbar__menu-social-media">
-            <li><a href="#" class="icon-facebook"></a></li>
-            <li><a href="#" class="icon-instagram"></a></li>
-            <li><a href="#" class="icon-spotify"></a></li>
-            <li><a href="#" class="icon-youtube"></a></li>
+            <li><a href="#" class="icon-facebook" target="_blank"></a></li>
+            <li><a href="#" class="icon-instagram" target="_blank"></a></li>
+            <li><a href="#" class="icon-spotify" target="_blank"></a></li>
+            <li><a href="#" class="icon-youtube" target="_blank"></a></li>
           </ul>
         </div>
       </div>
@@ -55,14 +55,14 @@
   </nav>
   <main class="px-15">
     <div class="content-container">
-      <p class="quote-description font-text text-left">
+      <p id="first-quote-omar-esp" class="quote-description font-text text-left">
         <em>"Con Omar hemos trabajado por varios años dirigiendo numerosos equipos de instrumentistas y vocalistas. Con una maestría en musicología, una fina ejecución y talento natural, él ha participado con diferentes orquestas sinfónicas y músicos de talla mundial. Es también profesor en un colegio y una universidad de música exclusivos en Lima. Todo ello, más su personalidad como profesional y amigo, me confirman su valioso aporte en la sinergia de composición para medios dentro de Torre Music".<br></em>
         <strong><br>Torre</strong>
       </p>
       <div class="image-container">
         <img loading="lazy" class="image-detail" src="../assets/images/omar-detail-es.jpg" alt="foto de omar">
       </div>
-      <p class="quote-description font-text text-left">
+      <p id="second-quote-omar-esp" class="quote-description font-text text-left">
         <em>"Con una formación académica que lo convierte en una pieza muy valiosa en nuestros proyectos musicales, Pienso que Omar es un músico que ha sabido balancear muy bien lo artístico y lo académico, contar con él es descansar en que todo saldrá bien y a tiempo".<br></em>
         <strong><br>Lando</strong>
       </p>
@@ -71,6 +71,8 @@
       <a class="btn-back font-text" href="/es/composicionparamedios/equipo" type="button">Volver</a>
     </div>
   </main>
+  <script src="./data.config.esp.js"></script>
+  <script src="../assets/js/setDataEsp.js"></script>
   <script src="../assets/js/main.js"></script>
 </body>
 </html>
