--- a/es/torre.html
+++ b/es/torre.html
@@ -44,10 +44,10 @@
             </li>
           </ul>
           <ul class="navbar__menu-social-media">
-            <li><a href="#" class="icon-facebook"></a></li>
-            <li><a href="#" class="icon-instagram"></a></li>
-            <li><a href="#" class="icon-spotify"></a></li>
-            <li><a href="#" class="icon-youtube"></a></li>
+            <li><a href="#" class="icon-facebook" target="_blank"></a></li>
+            <li><a href="#" class="icon-instagram" target="_blank"></a></li>
+            <li><a href="#" class="icon-spotify" target="_blank"></a></li>
+            <li><a href="#" class="icon-youtube" target="_blank"></a></li>
           </ul>
         </div>
       </div>
@@ -55,14 +55,14 @@
   </nav>
   <main class="px-15">
     <div class="content-container">
-      <p class="quote-description font-text text-left">
+      <p id="first-quote-torre-esp" class="quote-description font-text text-left">
         <em>"Tras muchos años de amistad, he conocido a Torre como pianista, compositor, y sin duda, un músico con una notable sensibilidad artística que le permite tocar el corazón de la gente a través de la música. Veo su versatilidad en la composición de canciones, música instrumental y orquestal".<br></em>
         <strong><br>Omar</strong>
       </p>
       <div class="image-container">
         <img loading="lazy" class="image-detail" src="../assets/images/torre-detail-es.jpg" alt="foto de torre">
       </div>
-      <p class="quote-description font-text text-left">
+      <p id="second-quote-torre-esp" class="quote-description font-text text-left">
         <em>"Si tuviera que describirlo en una frase, esa sería: 'Él respira música'.
           Torres es un músico de cuna y amigo entrañable. En los muchos años que lo conozco, he visto una habilidad excepcional para entrelazar los sentimientos y las emociones con la música, sin duda un don recibido y el mejor ingrediente en sus composiciones".<br></em>
         <strong><br>Lando</strong>
@@ -72,6 +72,8 @@
       </div>
     </div>
   </main>
+  <script src="./data.config.esp.js"></script>
+  <script src="../assets/js/setDataEsp.js"></script>
   <script src="../assets/js/main.js"></script>
 </body>
 </html>
