--- a/landoM.html
+++ b/landoM.html
@@ -44,10 +44,10 @@
             </li>
           </ul>
           <ul class="navbar__menu-social-media">
-            <li><a href="#" class="icon-facebook"></a></li>
-            <li><a href="#" class="icon-instagram"></a></li>
-            <li><a href="#" class="icon-spotify"></a></li>
-            <li><a href="#" class="icon-youtube"></a></li>
+            <li><a href="#" class="icon-facebook" target="_blank"></a></li>
+            <li><a href="#" class="icon-instagram" target="_blank"></a></li>
+            <li><a href="#" class="icon-spotify" target="_blank"></a></li>
+            <li><a href="#" class="icon-youtube" target="_blank"></a></li>
           </ul>
         </div>
       </div>
@@ -55,14 +55,14 @@
   </nav>
   <main class="px-15">
     <div class="content-container">
-      <p class="quote-description font-text">
+      <p id="first-quote-lando-eng" class="quote-description font-text">
         <em>"We know each other since our teenage years. Soon we'd be beginning to produce musically to other new artists, as well as making music for media in Peru and USA. With an inusual umbrella of skills and experience he became a natural ignitor, motivator and a key contributor within Torre Music.<br>He owns a great balance among quality sound appreciation, the ability to take the best choices during any mixing process and his openness to take advice and lessons from well known and awarded audio engineers, all of that has produced as a result a level of quality that encourage and also challenge our synergy".<br></em>
         <strong><br>Torre</strong>
       </p>
       <div class="image-container">
         <img loading="lazy" class="image-detail" src="./assets/images/lando-detail.jpg" alt="torre photo">
       </div>
-      <p class="quote-description font-text">
+      <p id="second-quote-lando-eng" class="quote-description font-text">
         <em>"Despite his long experience as a short film director, photographer, as well as a music producer, Lando didn't lose his passion for audio engineering, which has allowed him to grow until the point of achieving a level of quality that matches the international standards. Due to his vast background, he's always able to bring solid support to overcome the obstacles we may face within the production process at Torre Music".<br></em>
         <strong><br>Omar</strong>
       </p>
@@ -71,6 +71,8 @@
       <a class="btn-back font-text" href="/mediacomposing/team" type="button">Back</a>
     </div>
   </main>
+  <script src="./data.config.eng.js"></script>
+  <script src="./assets/js/setDataEng.js"></script>
   <script src="./assets/js/main.js"></script>
 </body>
 </html>
