--- a/mediacomposing/audioreel.html
+++ b/mediacomposing/audioreel.html
@@ -44,10 +44,10 @@
             </li>
           </ul>
           <ul class="navbar__menu-social-media">
-            <li><a href="#" class="icon-facebook"></a></li>
-            <li><a href="#" class="icon-instagram"></a></li>
-            <li><a href="#" class="icon-spotify"></a></li>
-            <li><a href="#" class="icon-youtube"></a></li>
+            <li><a href="#" class="icon-facebook" target="_blank"></a></li>
+            <li><a href="#" class="icon-instagram" target="_blank"></a></li>
+            <li><a href="#" class="icon-spotify" target="_blank"></a></li>
+            <li><a href="#" class="icon-youtube" target="_blank"></a></li>
           </ul>
         </div>
       </div>
@@ -72,10 +72,10 @@
         </div>
       </div>
     </div>
-    <p class="font-text link-media">
-      To listen to each track individually click <a class="font-text" href="https://soundcloud.com/torre-music-222374740/sets/media-composing/s-xaoQ0qCd9Qf?si=5205c91f38b24670ad92b8fffa5f853d&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">here</a>
-    </p>
+    <p id="text-caption-audio-eng" class="font-text link-media"></p>
   </main>
+  <script src="../data.config.eng.js"></script>
+  <script src="../assets/js/setDataEng.js"></script>
   <script src="../assets/js/main.js"></script>
 </body>
 </html>
