--- a/mediacomposing/index.html
+++ b/mediacomposing/index.html
@@ -44,10 +44,10 @@
             </li>
           </ul>
           <ul class="navbar__menu-social-media">
-            <li><a href="#" class="icon-facebook"></a></li>
-            <li><a href="#" class="icon-instagram"></a></li>
-            <li><a href="#" class="icon-spotify"></a></li>
-            <li><a href="#" class="icon-youtube"></a></li>
+            <li><a href="#" class="icon-facebook" target="_blank"></a></li>
+            <li><a href="#" class="icon-instagram" target="_blank"></a></li>
+            <li><a href="#" class="icon-spotify" target="_blank"></a></li>
+            <li><a href="#" class="icon-youtube" target="_blank"></a></li>
           </ul>
         </div>
       </div>
@@ -59,21 +59,9 @@
         <a href="/mediacomposing/showreel"><img loading="lazy" src="../assets/images/showreel.png" alt="logo show reel"></a>
         <a href="/mediacomposing/audioreel"><img loading="lazy" src="../assets/images/audioreel.png" alt="logo audio reel"></a>
       </div>
-      <p class="font-text px-15 description">
-        What we do:<br>
-        The composition of original music and special audio effects for cinematic and audio visual projects
-        <br><br>
-        For:<br>
-        Entrepreneurs, independent producers and companies
-        <br><br>
-        What we use:<br>
-        • Professional session musicians<br>
-        • Professional studio orchestras (22 Strings and 30-pieces orchestra)<br>
-        • 2 Programming studios equipped to deliver the quality the industry standards requires<br>
-        • 1 mixing and mastering studio equipped to work on many projects simultaneously<br>
-      </p>
+      <p id="paragraph_eng" class="font-text px-15 description"></p>
     </div>
-    <div class="group-images-container px-15 content-container">
+    <div id="images-list-eng" class="group-images-container px-15 content-container">
       <div class="image-container">
         <img loading="lazy" src="../assets/images/Fotos Royalty free.001.jpeg" alt="Top of the line virtual libraries">
         <h4 class="font-text">Top of the line virtual libraries</h4>
@@ -88,6 +76,8 @@
       </div>
     </div>
   </main>
+  <script src="../data.config.eng.js"></script>
+  <script src="../assets/js/setDataEng.js"></script>
   <script src="../assets/js/main.js"></script>
 </body>
 </html>
