--- a/mediacomposing/team.html
+++ b/mediacomposing/team.html
@@ -44,10 +44,10 @@
             </li>
           </ul>
           <ul class="navbar__menu-social-media">
-            <li><a href="#" class="icon-facebook"></a></li>
-            <li><a href="#" class="icon-instagram"></a></li>
-            <li><a href="#" class="icon-spotify"></a></li>
-            <li><a href="#" class="icon-youtube"></a></li>
+            <li><a href="#" class="icon-facebook" target="_blank"></a></li>
+            <li><a href="#" class="icon-instagram" target="_blank"></a></li>
+            <li><a href="#" class="icon-spotify" target="_blank"></a></li>
+            <li><a href="#" class="icon-youtube" target="_blank"></a></li>
           </ul>
         </div>
       </div>
@@ -66,6 +66,8 @@
       </div>
     </div>
   </main>
+  <script src="../data.config.eng.js"></script>
+  <script src="../assets/js/setDataEng.js"></script>
   <script src="../assets/js/main.js"></script>
 </body>
 </html>
