--- a/omarM.html
+++ b/omarM.html
@@ -44,10 +44,10 @@
             </li>
           </ul>
           <ul class="navbar__menu-social-media">
-            <li><a href="#" class="icon-facebook"></a></li>
-            <li><a href="#" class="icon-instagram"></a></li>
-            <li><a href="#" class="icon-spotify"></a></li>
-            <li><a href="#" class="icon-youtube"></a></li>
+            <li><a href="#" class="icon-facebook" target="_blank"></a></li>
+            <li><a href="#" class="icon-instagram" target="_blank"></a></li>
+            <li><a href="#" class="icon-spotify" target="_blank"></a></li>
+            <li><a href="#" class="icon-youtube" target="_blank"></a></li>
           </ul>
         </div>
       </div>
@@ -55,14 +55,14 @@
   </nav>
   <main class="px-15">
     <div class="content-container">
-      <p class="quote-description font-text">
+      <p id="first-quote-omar-eng" class="quote-description font-text">
         <em>"Omar and I have worked for many years leading a good number of teams with instrumentalists and vocalists. With a master degree in musicology, a fine performance and a natural talent for music, he has participated with different symphonic orchestras and world class musicians. He's also a music teacher in a both exclusive music university and a high school in Lima. On top of that, his personality as a professional musician and friend are for sure a key contribution to the synergy within Media Composing".<br></em>
         <strong><br>Torre</strong>
       </p>
       <div class="image-container">
         <img loading="lazy" class="image-detail" src="./assets/images/omar-detail.jpg" alt="omar photo">
       </div>
-      <p class="quote-description font-text">
+      <p id="second-quote-omar-eng" class="quote-description font-text">
         <em>"He owns an academic preparation that turns him into a very valuable element for our music projects in Media Composing. I think Omar is a musician who managed to balance very well art with knowledge. Counting on him brings confidence at knowing everything will be on point and on time".<br></em>
         <strong><br>Lando</strong>
       </p>
@@ -71,6 +71,8 @@
       <a class="btn-back font-text" href="/mediacomposing/team" type="button">Back</a>
     </div>
   </main>
+  <script src="./data.config.eng.js"></script>
+  <script src="./assets/js/setDataEng.js"></script>
   <script src="./assets/js/main.js"></script>
 </body>
 </html>
