--- a/es/index.html
+++ b/es/index.html
@@ -45,10 +45,10 @@
             </li>
           </ul>
           <ul class="navbar__menu-social-media">
-            <li><a href="#" class="icon-facebook"></a></li>
-            <li><a href="#" class="icon-instagram"></a></li>
-            <li><a href="#" class="icon-spotify"></a></li>
-            <li><a href="#" class="icon-youtube"></a></li>
+            <li><a href="#" class="icon-facebook" target="_blank"></a></li>
+            <li><a href="#" class="icon-instagram" target="_blank"></a></li>
+            <li><a href="#" class="icon-spotify" target="_blank"></a></li>
+            <li><a href="#" class="icon-youtube" target="_blank"></a></li>
           </ul>
         </div>
       </div>
@@ -57,39 +57,39 @@
   <main>
     <div class="swiper">
       <!-- Additional required wrapper -->
-      <div class="swiper-wrapper">
+      <div id="sliderlist-esp" class="swiper-wrapper">
         <!-- Slides -->
         <div class="swiper-slide focuspoint slide-torre" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text short-text">torre<span>UP HEAR</span></h2>
-          <img loading="lazy" src="../assets/images/JPG (Alta calidad).001.jpeg" alt="torre up hear">
+          <img src="../assets/images/JPG (Alta calidad).001.jpeg" alt="torre up hear">
         </div>
         <div class="swiper-slide focuspoint slide-emotions" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Emoción y pensamiento fusionados en imagen y sonido</h2>
-          <img loading="lazy" src="../assets/images/JPG (Alta calidad).002.jpeg" alt="Emoción y pensamiento fusionados en imagen y sonido">
+          <img src="../assets/images/JPG (Alta calidad).002.jpeg" alt="Emoción y pensamiento fusionados en imagen y sonido">
         </div>
         <div class="swiper-slide focuspoint slide-passion" data-focus-x="0.90" data-image-w="1150" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Pasión que transforma herramientas en arte</h2>
-          <img loading="lazy" src="../assets/images/JPG (Alta calidad).003.jpeg" alt="Pasión que transforma herramientas en arte">
+          <img src="../assets/images/JPG (Alta calidad).003.jpeg" alt="Pasión que transforma herramientas en arte">
         </div>
         <div class="swiper-slide focuspoint slide-music" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Música con el corazón entretejido en cada nota</h2>
-          <img loading="lazy" src="../assets/images/JPG (Alta calidad).004.jpeg" alt="Música con el corazón entretejido en cada nota">
+          <img src="../assets/images/JPG (Alta calidad).004.jpeg" alt="Música con el corazón entretejido en cada nota">
         </div>
         <div class="swiper-slide focuspoint slide-sounds" data-focus-x="0.1" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Sonido que toca más allá de los oídos</h2>
-          <img loading="lazy" src="../assets/images/JPG (Alta calidad).005.jpeg" alt="Sonido que toca más allá de los oídos">
+          <img src="../assets/images/JPG (Alta calidad).005.jpeg" alt="Sonido que toca más allá de los oídos">
         </div>
         <div class="swiper-slide focuspoint slide-sentiment" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Combinación de esfuerzos que realzan el sentimiento</h2>
-          <img loading="lazy" src="../assets/images/JPG (Alta calidad).006.jpeg" alt="Combinación de esfuerzos que realzan el sentimiento">
+          <img src="../assets/images/JPG (Alta calidad).006.jpeg" alt="Combinación de esfuerzos que realzan el sentimiento">
         </div>
         <div class="swiper-slide focuspoint slide-achieves" data-focus-x="0.6" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Arte que considera hasta los mínimos detalles</h2>
-          <img loading="lazy" src="../assets/images/JPG (Alta calidad).007.jpeg" alt="Arte que considera hasta los mínimos detalles">
+          <img src="../assets/images/JPG (Alta calidad).007.jpeg" alt="Arte que considera hasta los mínimos detalles">
         </div>
         <div class="swiper-slide focuspoint slide-lyrics" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Letras y melodías que levantan el espíritu</h2>
-          <img loading="lazy" src="../assets/images/JPG (Alta calidad).008.jpeg" alt="Letras y melodías que levantan el espíritu">
+          <img src="../assets/images/JPG (Alta calidad).008.jpeg" alt="Letras y melodías que levantan el espíritu">
         </div>
       </div>
       <!-- If we need pagination -->
@@ -106,6 +106,8 @@
       });
     }(jQuery));
   </script>
+  <script src="./data.config.esp.js"></script>
+  <script src="../assets/js/setDataEsp.js"></script>
   <script src="../assets/js/main.js"></script>
 </body>
 </html>
