--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             </li>
           </ul>
           <ul class="navbar__menu-social-media">
-            <li><a href="#" class="icon-facebook"></a></li>
-            <li><a href="#" class="icon-instagram"></a></li>
-            <li><a href="#" class="icon-spotify"></a></li>
-            <li><a href="#" class="icon-youtube"></a></li>
+            <li><a href="#" class="icon-facebook" target="_blank"></a></li>
+            <li><a href="#" class="icon-instagram" target="_blank"></a></li>
+            <li><a href="#" class="icon-spotify" target="_blank"></a></li>
+            <li><a href="#" class="icon-youtube" target="_blank"></a></li>
           </ul>
         </div>
       </div>
@@ -57,39 +57,39 @@
   <main>
     <div class="swiper">
       <!-- Additional required wrapper -->
-      <div class="swiper-wrapper">
+      <div id="sliderlist-eng" class="swiper-wrapper">
         <!-- Slides -->
         <div class="swiper-slide focuspoint slide-torre" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text short-text">torre<span>UP HEAR</span></h2>
-          <img loading="lazy" src="./assets/images/JPG (Alta calidad).001.jpeg" alt="torre up hear">
+          <img src="./assets/images/JPG (Alta calidad).001.jpeg" alt="torre up hear">
         </div>
         <div class="swiper-slide focuspoint slide-emotions" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Emotions and thoughts blending into images and sounds</h2>
-          <img loading="lazy" src="./assets/images/JPG (Alta calidad).002.jpeg" alt="Emotions and thoughts blending into images and sounds">
+          <img src="./assets/images/JPG (Alta calidad).002.jpeg" alt="Emotions and thoughts blending into images and sounds">
         </div>
         <div class="swiper-slide focuspoint slide-passion" data-focus-x="0.90" data-image-w="1150" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Passion that transforms art into a meaningful experience</h2>
-          <img loading="lazy" src="./assets/images/JPG (Alta calidad).003.jpeg" alt="Passion that transforms art into a meaningful experience">
+          <img src="./assets/images/JPG (Alta calidad).003.jpeg" alt="Passion that transforms art into a meaningful experience">
         </div>
         <div class="swiper-slide focuspoint slide-music" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Music with the heart intertwined into each note</h2>
-          <img loading="lazy" src="./assets/images/JPG (Alta calidad).004.jpeg" alt="Music with the heart intertwined into each note">
+          <img src="./assets/images/JPG (Alta calidad).004.jpeg" alt="Music with the heart intertwined into each note">
         </div>
         <div class="swiper-slide focuspoint slide-sounds" data-focus-x="0.1" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Sounds that touch beyond the ears</h2>
-          <img loading="lazy" src="./assets/images/JPG (Alta calidad).005.jpeg" alt="Sounds that touch beyond the ears">
+          <img src="./assets/images/JPG (Alta calidad).005.jpeg" alt="Sounds that touch beyond the ears">
         </div>
         <div class="swiper-slide focuspoint slide-sentiment" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Combined effort that enhances the sentiment</h2>
-          <img loading="lazy" src="./assets/images/JPG (Alta calidad).006.jpeg" alt="Combined effort that enhances the sentiment">
+          <img src="./assets/images/JPG (Alta calidad).006.jpeg" alt="Combined effort that enhances the sentiment">
         </div>
         <div class="swiper-slide focuspoint slide-achieves" data-focus-x="0.6" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Art that achieves a high standard</h2>
-          <img loading="lazy" src="./assets/images/JPG (Alta calidad).007.jpeg" alt="Art that achieves a high standard">
+          <img src="./assets/images/JPG (Alta calidad).007.jpeg" alt="Art that achieves a high standard">
         </div>
         <div class="swiper-slide focuspoint slide-lyrics" data-focus-x="-0.3" data-image-w="922" data-image-h="666">
           <h2 class="swiper-slide__text-image font-text long-text">Lyrics and melodies that uplift the spirit</h2>
-          <img loading="lazy" src="./assets/images/JPG (Alta calidad).008.jpeg" alt="Lyrics and melodies that uplift the spirit">
+          <img src="./assets/images/JPG (Alta calidad).008.jpeg" alt="Lyrics and melodies that uplift the spirit">
         </div>
       </div>
       <!-- If we need pagination -->
@@ -106,6 +106,8 @@
       });
     }(jQuery));
   </script>
+  <script src="./data.config.eng.js"></script>
+  <script src="./assets/js/setDataEng.js"></script>
   <script src="./assets/js/main.js"></script>
 </body>
 </html>
