--- a/mediacomposing/showreel.html
+++ b/mediacomposing/showreel.html
@@ -44,10 +44,10 @@
             </li>
           </ul>
           <ul class="navbar__menu-social-media">
-            <li><a href="#" class="icon-facebook"></a></li>
-            <li><a href="#" class="icon-instagram"></a></li>
-            <li><a href="#" class="icon-spotify"></a></li>
-            <li><a href="#" class="icon-youtube"></a></li>
+            <li><a href="#" class="icon-facebook" target="_blank"></a></li>
+            <li><a href="#" class="icon-instagram" target="_blank"></a></li>
+            <li><a href="#" class="icon-spotify" target="_blank"></a></li>
+            <li><a href="#" class="icon-youtube" target="_blank"></a></li>
           </ul>
         </div>
       </div>
@@ -72,10 +72,10 @@
         </div>
       </div>
     </div>
-    <p class="font-text link-media">
-      To watch each video individually click <a class="font-text" href="https://www.youtube.com/playlist?list=PL4qrdhLgUbQ_HAdzKIhNSwwXRMrj084ZC" target="_blank">here</a>
-    </p>
+    <p id="text-caption-video-eng" class="font-text link-media"></p>
   </main>
+  <script src="../data.config.eng.js"></script>
+  <script src="../assets/js/setDataEng.js"></script>
   <script src="../assets/js/main.js"></script>
 </body>
 </html>
