--- a/torreM.html
+++ b/torreM.html
@@ -44,10 +44,10 @@
             </li>
           </ul>
           <ul class="navbar__menu-social-media">
-            <li><a href="#" class="icon-facebook"></a></li>
-            <li><a href="#" class="icon-instagram"></a></li>
-            <li><a href="#" class="icon-spotify"></a></li>
-            <li><a href="#" class="icon-youtube"></a></li>
+            <li><a href="#" class="icon-facebook" target="_blank"></a></li>
+            <li><a href="#" class="icon-instagram" target="_blank"></a></li>
+            <li><a href="#" class="icon-spotify" target="_blank"></a></li>
+            <li><a href="#" class="icon-youtube" target="_blank"></a></li>
           </ul>
         </div>
       </div>
@@ -55,14 +55,14 @@
   </nav>
   <main class="px-15">
     <div class="content-container">
-      <p class="quote-description font-text">
+      <p id="first-quote-torre-eng" class="quote-description font-text">
         <em>"After many years as friends, I've got to know Torre as a pianist, composer and no doubt as a musician with a noticeable artistic sensitivity that allows him to reach up to his listeners' heart through music. I could see his versatility as a songwriter, as well as on instrumental and orchestral music".<br></em>
         <strong><br>Omar</strong>
       </p>
       <div class="image-container">
         <img loading="lazy" class="image-detail" src="./assets/images/torre-detail.jpg" alt="torre photo">
       </div>
-      <p class="quote-description font-text">
+      <p id="second-quote-torre-eng" class="quote-description font-text">
         <em>"If could describe him in one line, it'd be: He breathes music.<br>Torre is a natural born musician, a dear friend. Throughout the years, I've seen and exceptional ability to intertwine feelings and emotions with music, without hesitation it's a gift and the best ingredient in his compositions".<br></em>
         <strong><br>Lando</strong>
       </p>
@@ -71,6 +71,8 @@
       </div>
     </div>
   </main>
+  <script src="./data.config.eng.js"></script>
+  <script src="./assets/js/setDataEng.js"></script>
   <script src="./assets/js/main.js"></script>
 </body>
 </html>
